--- a/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Rank/RankViewController.storyboard
+++ b/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Rank/RankViewController.storyboard
@@ -17,7 +17,46 @@
                     <view key="view" contentMode="scaleToFill" id="KxI-9c-OoL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="OeP-Hj-I9l">
+                                <rect key="frame" x="164.5" y="273.5" width="46" height="120"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3q-Es-2v5">
+                                        <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="a:" destination="Bkg-hO-daD" eventType="touchUpInside" id="Bls-uU-ME4"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0GB-pQ-ubH">
+                                        <rect key="frame" x="0.0" y="30" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="b:" destination="Bkg-hO-daD" eventType="touchUpInside" id="nKu-7f-iod"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Qx-GL-tfV">
+                                        <rect key="frame" x="0.0" y="60" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="c:" destination="Bkg-hO-daD" eventType="touchUpInside" id="EWj-eX-tGY"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dr7-0W-WEo">
+                                        <rect key="frame" x="0.0" y="90" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="d:" destination="Bkg-hO-daD" eventType="touchUpInside" id="ZNZ-JU-cEX"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="OeP-Hj-I9l" firstAttribute="centerX" secondItem="KxI-9c-OoL" secondAttribute="centerX" id="XrO-bt-Fjh"/>
+                            <constraint firstItem="OeP-Hj-I9l" firstAttribute="centerY" secondItem="KxI-9c-OoL" secondAttribute="centerY" id="aUL-kp-D1a"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Rng-lc-6al"/>
                     </view>
                     <navigationItem key="navigationItem" id="4zN-qx-Lp7"/>
