--- a/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Room/GiftChannelView.xib
+++ b/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Room/GiftChannelView.xib
@@ -13,14 +13,17 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="HFE-sC-4j5" customClass="GiftChannelView" customModule="LiveBroadcast" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOY-fs-xpL" userLabel="背景">
-                    <rect key="frame" x="0.0" y="0.0" width="196.5" height="44"/>
+                    <rect key="frame" x="0.0" y="0.0" width="206.5" height="44"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rjh-Sm-pZN" customClass="GiftDigitLabel" customModule="LiveBroadcast" customModuleProvider="target">
-                    <rect key="frame" x="211.5" y="0.0" width="37.5" height="24"/>
+                    <rect key="frame" x="211.5" y="0.0" width="37.5" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="fhH-RM-5wR"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -43,8 +46,8 @@
                     <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1HT-KH-UR3" userLabel="礼物">
-                    <rect key="frame" x="152.5" y="0.0" width="44" height="44"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1HT-KH-UR3" userLabel="礼物">
+                    <rect key="frame" x="152.5" y="-5" width="54" height="54"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="1HT-KH-UR3" secondAttribute="height" multiplier="1:1" id="fUe-EV-jER"/>
                     </constraints>
@@ -55,17 +58,17 @@
                 <constraint firstItem="1HT-KH-UR3" firstAttribute="leading" secondItem="P54-GW-WKW" secondAttribute="trailing" id="1kx-Ic-JeS"/>
                 <constraint firstItem="UFj-f3-xDq" firstAttribute="top" secondItem="HFE-sC-4j5" secondAttribute="top" id="D8Y-Ua-0oU"/>
                 <constraint firstItem="3vt-6u-44G" firstAttribute="leading" secondItem="UFj-f3-xDq" secondAttribute="trailing" constant="10" id="IFa-2d-bYS"/>
-                <constraint firstItem="rjh-Sm-pZN" firstAttribute="leading" secondItem="1HT-KH-UR3" secondAttribute="trailing" constant="15" id="IWn-FD-g1u"/>
-                <constraint firstItem="rjh-Sm-pZN" firstAttribute="leading" secondItem="oOY-fs-xpL" secondAttribute="trailing" constant="15" id="Jzh-Nl-iCp"/>
+                <constraint firstItem="rjh-Sm-pZN" firstAttribute="leading" secondItem="1HT-KH-UR3" secondAttribute="trailing" constant="5" id="IWn-FD-g1u"/>
+                <constraint firstItem="rjh-Sm-pZN" firstAttribute="leading" secondItem="oOY-fs-xpL" secondAttribute="trailing" constant="5" id="Jzh-Nl-iCp"/>
                 <constraint firstAttribute="bottom" secondItem="UFj-f3-xDq" secondAttribute="bottom" id="LxF-Rx-XWn"/>
                 <constraint firstItem="rjh-Sm-pZN" firstAttribute="top" secondItem="HFE-sC-4j5" secondAttribute="top" id="SAw-bx-aLQ"/>
                 <constraint firstItem="oOY-fs-xpL" firstAttribute="top" secondItem="HFE-sC-4j5" secondAttribute="top" id="aJ0-es-zwQ"/>
                 <constraint firstItem="oOY-fs-xpL" firstAttribute="leading" secondItem="HFE-sC-4j5" secondAttribute="leading" id="bxn-9e-kwH"/>
                 <constraint firstItem="UFj-f3-xDq" firstAttribute="leading" secondItem="HFE-sC-4j5" secondAttribute="leading" id="dCX-ph-jzb"/>
-                <constraint firstAttribute="bottom" secondItem="1HT-KH-UR3" secondAttribute="bottom" id="elq-G2-Tqc"/>
+                <constraint firstAttribute="bottom" secondItem="1HT-KH-UR3" secondAttribute="bottom" constant="-5" id="elq-G2-Tqc"/>
                 <constraint firstItem="P54-GW-WKW" firstAttribute="leading" secondItem="UFj-f3-xDq" secondAttribute="trailing" constant="10" id="ioA-qq-l5i"/>
                 <constraint firstAttribute="bottom" secondItem="oOY-fs-xpL" secondAttribute="bottom" id="npq-33-kZo"/>
-                <constraint firstItem="1HT-KH-UR3" firstAttribute="top" secondItem="HFE-sC-4j5" secondAttribute="top" id="sU9-bF-H3i"/>
+                <constraint firstItem="1HT-KH-UR3" firstAttribute="top" secondItem="HFE-sC-4j5" secondAttribute="top" constant="-5" id="sU9-bF-H3i"/>
                 <constraint firstItem="3vt-6u-44G" firstAttribute="top" secondItem="HFE-sC-4j5" secondAttribute="top" constant="5" id="trl-zl-UUB"/>
                 <constraint firstAttribute="bottom" secondItem="P54-GW-WKW" secondAttribute="bottom" constant="2" id="ya0-7C-mYh"/>
             </constraints>
