--- a/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Profile/ProfileViewController.storyboard
+++ b/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Profile/ProfileViewController.storyboard
@@ -10,14 +10,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Profile View Controller-->
         <scene sceneID="nqF-Lk-VEr">
             <objects>
-                <viewController id="o3G-ms-eHQ" sceneMemberID="viewController">
+                <viewController id="o3G-ms-eHQ" customClass="ProfileViewController" customModule="LiveBroadcast" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HSe-VO-RJ4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="lmN-7U-Fc0"/>
                     </view>
                     <navigationItem key="navigationItem" id="y91-IZ-ATt"/>
