--- a/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Profile/ProfileViewController.storyboard
+++ b/StudyNotes/Swift Note/LiveBroadcast/Client/LiveBroadcast/Classes/Profile/ProfileViewController.storyboard
@@ -17,10 +17,77 @@
                     <view key="view" contentMode="scaleToFill" id="HSe-VO-RJ4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="VzL-49-EXO">
+                                <rect key="frame" x="87.5" y="153" width="200" height="161"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="mPN-KW-rPp">
+                                        <rect key="frame" x="11" y="0.0" width="178" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cg9-C6-jxd">
+                                                <rect key="frame" x="0.0" y="0.0" width="38" height="30"/>
+                                                <state key="normal" title="按钮1"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bhc-Qc-guR">
+                                                <rect key="frame" x="138" y="0.0" width="40" height="30"/>
+                                                <state key="normal" title="按钮2"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XT5-qt-9gf">
+                                        <rect key="frame" x="0.0" y="37" width="200" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="T4L-Yl-Gfi"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j7L-lB-fZQ">
+                                        <rect key="frame" x="0.0" y="74" width="200" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="wYe-fJ-orN"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="zB5-If-aKZ">
+                                        <rect key="frame" x="0.0" y="111" width="200" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pDs-iD-EAT">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="So3-2G-o4f">
+                                                <rect key="frame" x="150" y="0.0" width="50" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VzL-49-EXO" firstAttribute="centerY" secondItem="HSe-VO-RJ4" secondAttribute="centerY" constant="-100" id="fb7-RE-Xj4"/>
+                            <constraint firstItem="VzL-49-EXO" firstAttribute="centerX" secondItem="HSe-VO-RJ4" secondAttribute="centerX" id="xl5-vB-vSp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="lmN-7U-Fc0"/>
                     </view>
                     <navigationItem key="navigationItem" id="y91-IZ-ATt"/>
+                    <connections>
+                        <outlet property="button1" destination="Cg9-C6-jxd" id="SDG-Gi-KGH"/>
+                        <outlet property="button2" destination="Bhc-Qc-guR" id="eDz-qW-1YA"/>
+                        <outlet property="label1" destination="pDs-iD-EAT" id="s4Y-8C-9FQ"/>
+                        <outlet property="label2" destination="So3-2G-o4f" id="urN-NM-Wh1"/>
+                        <outlet property="textField1" destination="j7L-lB-fZQ" id="272-Zr-swH"/>
+                        <outlet property="textField2" destination="XT5-qt-9gf" id="Tl5-fr-YbH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GZ8-bj-5UW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
